--- a/web_frontend/src/app/app.component.html
+++ b/web_frontend/src/app/app.component.html
@@ -1,3 +1,14 @@
-<div flex class="container" style="height: 100%; background-color: black; color: yellow;">
-  <app-lane-table></app-lane-table>
-</div>
+
+<!--div flex class="container" style="height: 100%; background-color: black; color: yellow;">
+  <router-outlet></router-outlet>
+</div-->
+<app-layout class="container">
+  <mat-sidenav-container>
+    <mat-sidenav #sidenav role="navigation">
+      <!--this is a place for us to add side-nav code-->
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</app-layout>
