--- a/web_frontend/src/app/lane-table/lane-table.component.scss
+++ b/web_frontend/src/app/lane-table/lane-table.component.scss
@@ -1,11 +1,11 @@
 @font-face {
     font-family: digital7;
     src: url(../../assets/DSEG7ModernMini-Bold.woff2);
-    font-size: 300%;
+    font-size: 5vw;
 }
 th {
     color:rgb(0,0,86);
-    font-size: 24pt;
+    font-size: 5vw;
     font-family: Arial, Helvetica, sans-serif;
     padding: 10px;
     background-color: rgba(182, 183, 185, 0.7);
@@ -13,9 +13,10 @@ th {
 }
 td {
     font-family: digital7; 
-    font-size: 50pt; 
+    font-size: 5vw;
     text-align: center;
     padding: 10px 30px;
     background-color: rgba(0,0,86,.50);
     border-radius: 20px;
+    color: yellow;
 }
