--- a/web_frontend/src/app/lane-table/lane-table.component.scss
+++ b/web_frontend/src/app/lane-table/lane-table.component.scss
@@ -4,8 +4,8 @@
     font-size: 5vw;
 }
 th {
-    color:rgb(0,0,86);
-    font-size: 5vw;
+    color:#000056;
+    font-size: 3vh;
     font-family: Arial, Helvetica, sans-serif;
     padding: 10px;
     background-color: rgba(182, 183, 185, 0.7);
@@ -13,7 +13,7 @@ th {
 }
 td {
     font-family: digital7; 
-    font-size: 5vw;
+    font-size: 3vh;
     text-align: center;
     padding: 10px 30px;
     background-color: rgba(0,0,86,.50);
