--- a/web_frontend/src/app/navigation/navigation.component.html
+++ b/web_frontend/src/app/navigation/navigation.component.html
@@ -6,7 +6,8 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item [routerLink]="'/home'">Current Race</a>
-      <a mat-list-item [routerLink]="'/settings'">Settings</a>
+      <a mat-list-item [routerLink]="'/race-settings'">Race Settings</a>
+      <a mat-list-item [routerLink]="'/pit-settings'">Pit Settings</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
