--- a/web_frontend/src/app/navigation/navigation.component.html
+++ b/web_frontend/src/app/navigation/navigation.component.html
@@ -9,6 +9,8 @@
       <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/race-settings'">Race Settings</a>
       <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/pit-settings'">Pit Settings</a>
       <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/lane-settings'">Lane Settings</a>
+      <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/track-test'">Track Testing</a>
+      <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/race-manager'">Race Manager</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
