Add registration support

--- a/web_frontend/src/app/navigation/navigation.component.html
+++ b/web_frontend/src/app/navigation/navigation.component.html
@@ -11,6 +11,7 @@
       <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/lane-settings'">Lane Settings</a>
       <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/track-test'">Track Testing</a>
       <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/race-manager'">Race Manager</a>
+      <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/registration'">Registration</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
