--- a/web_frontend/src/app/settings/setting.component.html
+++ b/web_frontend/src/app/settings/setting.component.html
@@ -1,5 +1,5 @@
 <div [formGroup]="form" fxLayout="row" fxLayoutGap="10px">
-    <div>
+    <div fxFlex="40">
         <label [attr.for]="setting.name">{{ setting.label }}</label>
     </div>
 
