Add track reset to web frontend

--- a/web_frontend/src/app/navigation/navigation.component.html
+++ b/web_frontend/src/app/navigation/navigation.component.html
@@ -12,6 +12,7 @@
       <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/track-test'">Track Testing</a>
       <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/race-manager'">Race Manager</a>
       <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/badge-manager'">Registration</a>
+      <a mat-list-item (click)="drawer.toggle()" [routerLink]="'/race-reset'">Reset</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
